2011-06-06  Paul Kinlan  <paulkinlan@google.com>

Reviewed by Jeremy Orlow.

        Adds a test for firing popstate, using window.dispatchEvent.
        https://bugs.webkit.org/show_bug.cgi?id=62099

        * fast/events/fire-popstate-event-expected.txt: Added.
        * fast/events/fire-popstate-event.html: Added.
2011-06-06  Paul Kinlan  <paulkinlan@google.com>

        Reviewed by Jeremy Orlow.

        Let developers call createEvent("PopStateEvent"), previously it wasn't
        exposed and threw an exeception.
        https://bugs.webkit.org/show_bug.cgi?id=62099

        * WebCore/dom/Document.cpp:
        * WebCore/dom/PopStateEvent.cpp:
        * WebCore/dom/PopStateEvent.h:

Canonical link: https://commits.webkit.org/77630@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88187 268f45cc-cd09-0410-ab3c-d52691b4dbfc